--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,13 @@
+name: Test My Reusable Workflow
+on: [push]
 
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      # Use the reusable workflow from repository A
+      - name: Use Reusable Workflow from A
+        uses: CICD-test-nable/JAVA_SAMPLE_SPRING/.github/workflows/main.yml@master
