--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,18 @@
+name: Test My Reusable Workflow
+on: push
+
+jobs:
+  reusable_workflow_job:
+    runs-on: ubuntu-latest
+    environment: production
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2 # This step checks out your repository code
+
+  reusable_workflow:
+    runs-on: ubuntu-latest
+    needs: reusable_workflow_job
+    steps:
+      - name: Use Another Workflow
+        uses: CICD-test-nable/JAVA_SAMPLE_SPRING/.github/workflows/main.yml@master
 
