--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,17 +2,13 @@ name: Test My Reusable Workflow
 on: push
 
 jobs:
-  reusable_workflow_job:
-    runs-on: ubuntu-latest
-    environment: production
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v2 # This step checks out your repository code
+  call-workflow-1-in-local-repo:
+    uses: CICD-test-nable/JAVA_SAMPLE_SPRING/.github/workflows/main.yml@master
 
-  reusable_workflow:
-    runs-on: ubuntu-latest
-    needs: reusable_workflow_job
-    steps:
-      - name: Use Another Workflow
-        uses: CICD-test-nable/JAVA_SAMPLE_SPRING/.github/workflows/main.yml@master
+  # reusable_workflow:
+  #   runs-on: ubuntu-latest
+  #   needs: reusable_workflow_job
+  #   steps:
+  #     - name: Use Another Workflow
+  #       uses: CICD-test-nable/JAVA_SAMPLE_SPRING/.github/workflows/main.yml@master
 
