--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,3 +7,4 @@ jobs:
     secrets:
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      SONAR_PROJECT_KEY: ${{ secrets.SONAR_HOST_URL }}
