--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on: push
 
 jobs:
   call-workflow-1-in-local-repo:
-    uses: CICD-test-nable/JAVA_SAMPLE_SPRING/.github/workflows/main.yml@master
+    uses: CICD-test-nable/Reusable-workflow-for-java/.github/workflows/main.yml@main
     secrets:
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
